--- a/micro/docker-compose.yml
+++ b/micro/docker-compose.yml
@@ -9,6 +9,9 @@ services :
       - "4002"
     networks : 
       - proyectos-app
+    environment:
+    - MONGO_URI=${MONGO_URI}
+    - PORT=4002
 
   proyectos-micros-2 :
     container_name : proyectos-micros-2
@@ -17,6 +20,9 @@ services :
       - "4002"
     networks : 
       - proyectos-app
+    environment:
+      - MONGO_URI=${MONGO_URI}
+      - PORT=4002
 
   proyectos-micros-3 :
     container_name : proyectos-micros-3
@@ -25,6 +31,9 @@ services :
       - "4002"
     networks : 
       - proyectos-app
+    environment:
+      - MONGO_URI=${MONGO_URI}
+      - PORT=4002
 
   proyectos-micros-4 :
     container_name : proyectos-micros-4
@@ -32,7 +41,10 @@ services :
     ports :
       - "4002"
     networks : 
-      - proyectos-app        
+      - proyectos-app 
+    environment:
+      - MONGO_URI=${MONGO_URI}
+      - PORT=4002
   
   loader-balancer:
     container_name : loader-balancer
@@ -43,6 +55,9 @@ services :
       - "4003:80"
     networks : 
       - proyectos-app
+    environment:
+      - MONGO_URI=${MONGO_URI}
+      - PORT=4002
 
 networks :
   proyectos-app :
